--- a/package.json
+++ b/package.json
@@ -23,25 +23,26 @@
     },
     "homepage": "https://github.com/schmeckm/OEE_calculator#readme",
     "dependencies": {
-        "@influxdata/influxdb-client": "^1.33.2",
-        "axios": "^1.7.2",
+        "@influxdata/influxdb-client": "^1.35.0",
+        "ascii-art": "^2.8.5",
+        "axios": "^1.7.7",
         "basic-auth": "^2.0.1",
         "bcrypt": "^5.1.1",
-        "body-parser": "^1.20.2",
-        "chai-http": "^5.0.0",
+        "body-parser": "^1.20.3",
+        "chai-http": "^5.1.1",
         "chalk": "^5.3.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "express-rate-limit": "^7.4.0",
+        "express": "^4.21.0",
+        "express-rate-limit": "^7.4.1",
         "express-session": "^1.18.0",
         "express-validator": "^7.2.0",
-        "helmet": "^7.1.0",
+        "helmet": "^8.0.0",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "lowdb": "^7.0.1",
-        "moment-timezone": "^0.5.45",
-        "mqtt": "^5.8.0",
+        "moment-timezone": "^0.5.46",
+        "mqtt": "^5.10.1",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.15",
         "opossum": "^8.1.4",
@@ -53,7 +54,7 @@
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "uuid": "^10.0.0",
-        "winston": "^3.13.0",
+        "winston": "^3.15.0",
         "winston-daily-rotate-file": "^5.0.0",
         "ws": "^8.18.0"
     },
@@ -62,8 +63,11 @@
         "esdoc": "^1.1.0",
         "esdoc-standard-plugin": "^1.0.0",
         "mocha": "^10.7.3",
-        "nodemon": "^3.1.4",
-        "sinon": "^18.0.0",
-        "typedoc": "^0.26.6"
-    }
+        "nodemon": "^3.1.7",
+        "openapi-types": "^12.1.3",
+        "sinon": "^19.0.2",
+        "typedoc": "^0.26.8",
+        "typescript": "^5.6.2"
+    },
+    "packageManager": "yarn@4.5.0"
 }
