--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,3 @@
-name: Deploy Node.js Application
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   deploy:
     runs-on: self-hosted
@@ -19,7 +12,8 @@ jobs:
         run: |
           yarn install
 
-      # Schritt 3: Anwendung neu starten (PM2)
-      - name: Restart Application
+      # Schritt 3: Anwendung starten oder neu starten (PM2)
+      - name: Start or Restart Application
         run: |
-          pm2 restart OEE_solution || pm2 start server.js --name "OEE_solution"
+          pm2 describe OEE_solution > /dev/null || pm2 start server.js --name "OEE_solution"
+          pm2 restart OEE_solution --update-env
