--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      # Schritt 1: Repository klonen
+      # Schritt 1: Repository klonen 2
       - name: Checkout repository
         uses: actions/checkout@v3
 
