--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     },
     "devDependencies": {
         "chai": "^5.1.1",
+        "envfile": "^7.1.0",
         "mocha": "^10.7.3",
         "nodemon": "^3.1.7",
         "sinon": "^19.0.2"
