--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
+        "proper-lockfile": "^4.1.2",
         "sparkplug-payload": "^1.0.3",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
