--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bcrypt": "^5.1.1",
         "canvas": "^2.11.2",
         "chai-http": "^5.1.1",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
         "express-openid-connect": "^2.17.1",
@@ -54,6 +55,7 @@
         "ws": "^8.18.0"
     },
     "devDependencies": {
+        "@types/cors": "^2",
         "chai": "^5.1.1",
         "envfile": "^7.1.0",
         "mocha": "^10.7.3",
