--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
         "envfile": "^7.1.0",
         "mocha": "^10.7.3",
         "nodemon": "^3.1.7",
-        "sinon": "^19.0.2"
+        "sinon": "^19.0.2",
+        "typescript": "^5.6.3"
     },
     "packageManager": "yarn@4.5.0"
 }
