--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "A simple OEE calculator API",
     "main": "index.js",
     "scripts": {
-        "start": "node server.js",
+        "start": "cross-env NODE_ENV=production node server.js",
+        "start:development": "cross-env NODE_ENV=development node server.js",
+        "start:production": "cross-env NODE_ENV=production node server.js",
         "dev": "nodemon server.js",
         "test": "mocha test/**/*.test.js"
     },
@@ -57,6 +59,7 @@
     "devDependencies": {
         "@types/cors": "^2",
         "chai": "^5.1.1",
+        "cross-env": "^7.0.3",
         "envfile": "^7.1.0",
         "mocha": "^10.7.3",
         "nodemon": "^3.1.7",
