--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
     "homepage": "https://github.com/schmeckm/OEE_calculator#readme",
     "dependencies": {
         "@influxdata/influxdb-client": "^1.35.0",
-        "ascii-art": "^2.8.5",
+        "ascii-art": "^1.5.1",
         "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.3",
         "canvas": "^2.11.2",
         "chai-http": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.0",
-        "express-openid-connect": "^2.17.1",
+        "express-openid-connect": "^0.5.0",
         "express-rate-limit": "^7.4.1",
         "express-session": "^1.18.0",
         "express-validator": "^7.2.0",
@@ -47,7 +48,11 @@
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
+        "pg": "^8.13.1",
+        "pg-hstore": "^2.3.4",
         "proper-lockfile": "^4.1.2",
+        "sanitize-html": "^2.13.1",
+        "sequelize": "^6.37.5",
         "sparkplug-payload": "^1.0.3",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
