--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "express-rate-limit": "^7.4.1",
         "express-session": "^1.18.0",
         "express-validator": "^7.2.0",
+        "google-auth-library": "^9.15.1",
         "helmet": "^8.0.0",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
